Fix layout issues and remove backgrounds

--- a/static/css/customization.css
+++ b/static/css/customization.css
@@ -4,6 +4,7 @@
 
 #header header h1 {
 	margin: 2em;
+	font-size: 2em;
 	text-transform: none;
 }
 
@@ -13,4 +14,26 @@
 
 .content p iframe {
 	width: calc(100% - 10px);
+}
+
+html {
+	background-image: none;
+}
+
+@media screen and (max-width: 980px) {
+	#header header img {
+		width: 700px;
+	}
+}
+
+@media screen and (max-width: 736px) {
+	#header header img {
+		width: 400px;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	#header header img {
+		width: 300px;
+	}
 }
